refactor: manually call Init() in main.go instead of run init() automatically when the program starts
