# docs/swagger.json
@@ -25,11 +25,17 @@
                         "schema": {
                             "$ref": "#/definitions/model.Registration"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "test query param",
+                        "name": "test",
+                        "in": "query"
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "type": "string"
                         }
